--- a/app/views/payments/make_payment.js.erb
+++ b/app/views/payments/make_payment.js.erb
@@ -1,4 +1,32 @@
 $('.sale_totals').html("<%= escape_javascript render('sales/shared/sale_totals') %>");
 $('.sale_payments').html("<%= escape_javascript render('sales/shared/sale_payments') %>");
 $('.make_payment').html("<%= escape_javascript render('sales/shared/payment') %>");
-$('.modal-footer button').click();
+<%if flash[:alert].present? || flash[:toastr].present? || flash[:error].present? || flash[:errors].present? || flash[:success].present? || flash[:notice].present? || flash[:info].present?%>
+
+<%if flash[:alert].present?%>
+flash_alert("<%= flash[:alert] %>");
+<%end%>
+
+<%if flash[:error].present?%>
+flash_error("<%= flash[:error] %>");
+<%end%>
+
+<%if flash[:errors].present?%>
+<%flash[:errors].each do |e|%>
+flash_error("<%= e %>");
+<%end%>
+<%end%>
+
+<%if flash[:success].present?%>
+flash_success("<%= flash[:success]%>")
+$('#makePayment').modal('toggle');
+<%end%>
+
+<%if flash[:notice].present?%>
+flash_notice("<%= flash[:notice] %>");
+<%end%>
+
+<%if flash[:info].present?%>
+flash_info("<%= flash[:info] %>");
+<%end%>
+<%end%>
