--- a/app/views/sales/shared/_customer_info.html.erb
+++ b/app/views/sales/shared/_customer_info.html.erb
@@ -1,20 +1,27 @@
 <div class="row item_search_wrapper hidden-print">
-  <div class="col-sm-4">
-    <h4 class="text-info"><span class="glyphicon glyphicon-search"></span> Find</h4>
-    <hr />
+  <div class="col-sm-12">
+    <!--<h4 class="text-info"><span class="glyphicon glyphicon-search"></span> Find</h4>-->
+    <!--<button class="btn pull-right" data-toggle="modal" data-target="#customCustomer">-->
+      <!--Create Customer-->
+    <!--</button>-->
+
+
     <%= form_for :search, :url => url_for(:controller => "sales", :action => "update_customer_options", :format => :js), :method => "get", :remote => true do |f| %>
-      <%= f.text_field :customer_name, :class => "form-control customer_search_input", :placeholder => "Search Customers" %>
-      <%= f.hidden_field :sale_id, :value => @sale.id %>
-      <%= submit_tag "search", :class => "btn btn-info btn-lg customer_search" %>
+        <%= f.hidden_field :sale_id, :value => @sale.id %>
+        <div class="row">
+          <div class="col-md-9">
+            <%= f.text_field :customer_name, :class => "form-control customer_search_input", :placeholder => "Search Customers" %>
+          </div>
+          <div class="col-md-2">
+            <%= submit_tag "search", :class => "btn btn-info btn-sm customer_search" %>
+            </div>
+        </div>
     <% end %>
-    <p>or</p>
-    <button class="btn" data-toggle="modal" data-target="#customCustomer">
-      Create Customer
-    </button> 
+    <hr />
   </div>
-  <div class="col-sm-8">
+  <div class="col-sm-12">
     <div class="searched_customers">
-      <%= render :partial => 'sales/shared/searched_customers' %>
+      <%= render :partial => 'sales/shared/searched_customers' , customers: @available_customers %>
     </div>
   </div>
 </div>
