--- a/app/views/sales/shared/_invoice.html.erb
+++ b/app/views/sales/shared/_invoice.html.erb
@@ -1,103 +1,124 @@
+<style>
+    .b-b-b{
+        border-bottom: 3px solid black;
+        padding: 0px !important;
+        width: 88%;
+        margin: 10px 6%;
+    }
+    .b-b{
+        border-bottom: 3px solid black;
+    }
+    .font-size-10{
+        font-size: 10px;
+    }
+    .font-size-12{
+        font-size: 12px;
+    }
+    .receipt > .table>tbody>tr:first-child >td
+    {
+        margin-top: 5px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
 
-  <section class="vbox bg-white">
-    <header class="header b-b b-light hidden-print">
-      <button href="#" class="btn btn-sm btn-info pull-right invoice-<%= @sale.id%>" onClick="window.print();">Print</button>
-      <p>Invoice</p>
-    </header>
-    <section class="scrollable wrapper">
-      <%= image_tag('logo-white.png' ,  class: 'm-r-sm' , style: "height: 50px") %>
-      <!--<i class="fa fa-apple fa fa-3x"></i>-->
+    }
+    .receipt > .table>tbody>tr:last-child >td
+    {
+        /* margin-bottom: 5px;*/
+        border-bottom: 2px solid black;
+
+    }
+    .receipt > .table>tbody > tr >td
+    {
+        border: none;
+        padding: 8px 0px;
+
+    }
+    .m-b-10{
+        margin-bottom: 10px;
+    }
+    .m-zero
+    {
+        margin: 0px !important;
+    }
+    .m-y-10{
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+</style>
+<button href="#" class="btn btn-sm btn-info pull-right invoice-<%= @sale.id%>" onClick="window.print();">Print</button>
+<div class="container receipt">
+  <div class="row">
+    <div class="well col-xs-5 col-sm-5 col-md-3 col-xs-offset-1 col-sm-offset-1 col-md-offset-6">
       <div class="row">
-        <div class="col-xs-6">
-          <h4><%= @sale.company.name %></h4>
-          <!--<p><a href="http://www.apple.com">www.apple.com</a></p>-->
-          <!--<p>1 Infinite Loop <br>-->
-          <!--95014 Cuperino, CA<br>-->
-          <!--United States-->
-          <!--</p>-->
-          <!--<p>-->
-          <!--Telephone:  800-692-7753<br>-->
-          <!--Fax:  800-692-7753-->
-          <!--</p>-->
+        <div class="pull-left col-xs-12 col-sm-12 col-md-12">
+          <h3><%= @sale.company.name%></h3>
         </div>
-        <!--<div class="col-xs-6 text-right">-->
-        <!--<p class="h4">#<%#= @sale.id%></p>-->
-        <!--<h5><%#= @sale.updated_at.strftime("%b %d, %Y %I:%M %p") %></h5>-->
-        <!--</div>-->
+        <div class="col-xs-6 col-sm-6 col-md-6 font-size-10">
+          <address style="margin-bottom: 5px;">
+            2135 Sunset Blvd
+            <br>
+            Los Angeles, CA 90026
+            <br>
+            (213) 484-6829
+          </address>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 text-right font-size-10">
+          <p>
+            <span><%= @sale.created_at.strftime('%B %d, %Y')%></span>
+          </p>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 text-right font-size-10">
+          <p>
+            <span><%= @sale.created_at.strftime('%I:%S %P')%></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 b-b-b">
+        </div>
       </div>
-      <!--<div class="well m-t">-->
-      <!--<div class="row">-->
-      <!--<div class="col-xs-6">-->
-      <!--<strong>TO:</strong>-->
-      <!--<h4>John Smith</h4>-->
-      <!--<p>-->
-      <!--2nd Floor<br>-->
-      <!--St John Street, Aberdeenshire 2541<br>-->
-      <!--United Kingdom<br>-->
-      <!--Phone: 031-432-678<br>-->
-      <!--Email: youemail@gmail.com<br>-->
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="col-xs-6">-->
-      <!--<strong>SHIP TO:</strong>-->
-      <!--<h4>John Smith</h4>-->
-      <!--<p>-->
-      <!--2nd Floor<br>-->
-      <!--St John Street, Aberdeenshire 2541<br>-->
-      <!--United Kingdom<br>-->
-      <!--Phone: 031-432-678<br>-->
-      <!--Email: youemail@gmail.com<br>-->
-      <!--</p>-->
-      <!--</div>-->
-      <!--</div>-->
-      <!--</div>-->
-      <p class="m-t m-b">Order date: <strong><%= @sale.updated_at.strftime("%d %b %Y %I:%M %p") %></strong><br>
-        <!--Order status: <span class="label bg-success">Shipped</span><br>-->
-        Order ID: <strong>#<%= @sale.id%></strong>
-      </p>
-      <div class="line"></div>
-      <table class="table">
-        <thead>
-        <tr>
-          <th>SKU</th>
-          <th>ITEM</th>
-          <th width="140">UNIT PRICE</th>
-          <th width="60">QTY</th>
-          <th width="90">TOTAL</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @sale.line_items.each do |s|%>
-            <tr>
-              <td><%= link_to s.item.sku , s.item , target: '_blank' %></td>
-              <td><%= link_to  s.item.name , s.item , target: '_blank'%></td>
-              <td><%#= value_in_currency s.price%></td>
-              <td><%= s.quantity%></td>
-              <td><%#= value_in_currency s.total_price %></td>
-            </tr>
-        <% end %>
-        <tr>
-          <td colspan="4" class="text-right"><strong>Subtotal</strong></td>
-          <td><%#= value_in_currency @sale.amount%></td>
-        </tr>
-
-
-        <tr>
-          <td colspan="4" class="text-right no-border"><strong>VAT Included in Total</strong> (<%= @sale.company.tax_rate.blank? ? 'not configured' : @sale.company.tax_rate.to_s + '%' %>)</td>
-          <td><%#= value_in_currency @sale.tax%></td>
-        </tr>
-
-        <tr>
-          <td colspan="4" class="text-right no-border"><strong>Discount</strong> (<%= @sale.discount.to_f * 100%>%)</td>
-          <td><%#= value_in_currency @sale.get_discounted_amount%></td>
-        </tr>
-
-        <tr>
-          <td colspan="4" class="text-right no-border"><strong>Total</strong></td>
-          <td><strong><%#= value_in_currency @sale.total_amount%></strong></td>
-        </tr>
-        </tbody>
-      </table>
-    </section>
-  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
-</section>
+      <div class="row font-size-10">
+        <p>
+          <span class="col-xs-6 col-sm-6 col-md-6 text-left"><%= @sale.paid? ? 'Receipt' : 'Invoice #'%></span>
+          <span class="col-xs-6 col-sm-6 col-md-6 text-center"> <%= @sale.id%></span>
+          <% if @sale.payments.last.cash_and_card? %>
+          <span class="col-xs-6 col-sm-6 col-md-6 text-left">Payment Status #:</span>
+          <span class="col-xs-6 col-sm-6 col-md-6 text-center"> PAID</span>
+          <% elsif @sale.payments.last.payment_term? %>
+              <span class="col-xs-6 col-sm-6 col-md-6 text-left">Payment Status #:</span>
+              <span class="col-xs-6 col-sm-6 col-md-6 text-center">DUE IN <%= @sale.payments.last.payment_term%> DAYS</span>
+          <% end %>
+        </p>
+      </div>
+      <div class="row receipt" style="margin: 10px 0px 5px 0px;">
+        <table class="table table-hover font-size-12 m-b-10">
+          <tbody>
+          <% @sale.line_items.each do |line_item|%>
+              <tr>
+                <td class="col-sm-9 col-xs-9 col-md-9"><span><%= line_item.item.name%></span></td>
+                <td class="col-sm-1 col-xs-1 col-md-1" style="text-align: center">x<%= line_item.quantity%> </td>
+                <td class="col-sm-2 col-xs-2 col-md-2 text-center"><%= number_to_currency(@sale.total_amount , unit: @sale.company.currency)%></td>
+              </tr>
+          <% end%>
+          </tbody>
+        </table>
+        <div class="row b-b m-zero font-size-12">
+          <p>
+            <span class="col-xs-6 col-sm-6 col-md-6 text-left m-y-10" style="margin-left: -15px;  margin-top: 0px !important; font-weight: 400 !important">Subtotal</span>
+            <span class="col-xs-6 col-sm-6 col-md-6 text-right m-y-10" style="margin-right: -15px;  margin-top: 0px !important; float: right;"><%= number_to_currency(@sale.total_amount , unit: @sale.company.currency)%></span>
+          </p>
+        </div>
+        <div class="row font-size-12" style="margin: 15px 0px;">
+          <p>
+            <span class="col-xs-6 col-sm-6 col-md-6 text-left" style="margin-left: -15px; line-height: 30px;"><b>Total</b></span>
+            <span class="col-xs-6 col-sm-6 col-md-6 text-right" style="margin-right: 0px; font-size: 19px; float: right;"><strong><%= number_to_currency(@sale.total_amount , unit: @sale.company.currency)%></strong></span>
+          </p>
+        </div>
+        <div class="row m-zero">
+          <p>
+          <h4 class="col-xs-4 col-sm-4 col-md-4 text-left sign-receipt" ><strong style="float: left; margin-left: -15px;">Sign</strong></h4>
+          <span class="col-xs-8 col-sm-8 col-md-8" style="border-bottom: 1px dotted black; height: 26px;"></span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
