--- a/app/views/template/_flash_messages.html.erb
+++ b/app/views/template/_flash_messages.html.erb
@@ -2,111 +2,39 @@
 
     <%if flash[:alert].present?%>
         <script>
-            $.amaran({
-                'theme'     :'colorful',
-                'content'   :{
-                    bgcolor:'#FFC333',
-                    color:'#fff',
-                    message:"<%= flash[:alert] %>"
-                },
-                'cssanimationOut'   :'slideRight',
-                'outEffect'         :'slideRight',
-                'closeOnClick'  :true,
-                'position'          :'top right',
-                'closeButton': true
-            });
+          flash_alert("<%= flash[:alert] %>");
         </script>
     <%end%>
 
     <%if flash[:error].present?%>
         <script>
-            $.amaran({
-                'theme'     :'colorful',
-                'content'   :{
-                    bgcolor:'#D04B2B',
-                    color:'#fff',
-                    message:"<%= flash[:error] %>"
-                },
-                'cssanimationOut'   :'slideRight',
-                'outEffect'         :'slideRight',
-                'closeOnClick'  :true,
-                'position'          :'top right',
-                'closeButton': true
-            });
+            flash_error("<%= flash[:error] %>");
         </script>
     <%end%>
 
     <%if flash[:errors].present?%>
         <%flash[:errors].each do |e|%>
             <script>
-                $.amaran({
-                    'theme'     :'colorful',
-                    'content'   :{
-                        bgcolor:'#D04B2B',
-                        color:'#fff',
-                        message:"<%= e %>"
-                    },
-                    'cssanimationOut'   :'slideRight',
-                    'outEffect'         :'slideRight',
-                    'closeOnClick'  :true,
-                    'position'          :'top right',
-                    'closeButton': true
-                });
+                flash_error("<%= e %>");
             </script>
         <%end%>
     <%end%>
 
     <%if flash[:success].present?%>
         <script>
-            $.amaran({
-                'theme'     :'colorful',
-                'content'   :{
-                    bgcolor:'#80C14B',
-                    color:'#fff',
-                    message:"<%= flash[:success] %>"
-                },
-                'cssanimationOut'   :'slideRight',
-                'outEffect'         :'slideRight',
-                'closeOnClick'  :true,
-                'position'          :'top right',
-                'closeButton': true
-            });
+           flash_success("<%= flash[:success] %>");
         </script>
     <%end%>
 
     <%if flash[:notice].present?%>
         <script>
-            $.amaran({
-                'theme'     :'colorful',
-                'content'   :{
-                    bgcolor:'#80C14B',
-                    color:'#fff',
-                    message:"<%= flash[:notice] %>"
-                },
-                'cssanimationOut'   :'slideRight',
-                'outEffect'         :'slideRight',
-                'closeOnClick'  :true,
-                'position'          :'top right',
-                'closeButton': true
-            });
+            flash_notice("<%= flash[:notice] %>");
         </script>
     <%end%>
 
     <%if flash[:info].present?%>
         <script>
-            $.amaran({
-                'theme'     :'colorful',
-                'content'   :{
-                    bgcolor:'#35A4DA',
-                    color:'#fff',
-                    message:"<%= flash[:info] %>"
-                },
-                'cssanimationOut'   :'slideRight',
-                'outEffect'         :'slideRight',
-                'closeOnClick'  :true,
-                'position'          :'top right',
-                'closeButton': true
-            });
+            flash_info("<%= flash[:info] %>");
         </script>
     <%end%>
 <%end%>
