--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -69,7 +69,7 @@
                       <td><%= value_in_currency(sale.paid_total) %></td>
                       <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{ value_in_currency(sale.remaining_balance)}" %></td>
                       <td class="text-right">
-                        <%=link_to raw("<i class= 'fa fa-print'></i>"),invoice_sale_path(sale), class: "btn btn-dark"%>
+                        <%#=link_to raw("<i class= 'fa fa-print'></i>"),invoice_sale_path(sale), class: "btn btn-dark"%>
                         <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-dark"%>
                         <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-dark",:method => :delete, data: {:confirm => "Are you sure?"}%>
                       </td>
