--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -63,7 +63,7 @@
         </footer>
       </section>
     </aside>
-  <aside class="col-md-8aside-md bg-white b-r" id="subNav">
+  <aside class="col-md-8aside-md bg-white b-l" id="subNav">
     <section class="vbox">
       <header class="header bg-white b-b clearfix">
         <%= link_to raw("<i class='fa fa-trash-o'></i>") , '#',id:'empty-cart' ,class: "btn btn-icon btn-default btn-sm pull-right" %>
