--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,5 +1,17 @@
 
   <section class="hbox stretch">
+    <aside class="aside-md bg-white b-l" id="subNav">
+      <section class="vbox">
+        <header class="header bg-white b-b clearfix">
+          <%= link_to raw("<i class='fa fa-trash-o'></i>") , '#',id:'empty-cart' ,class: "btn btn-icon btn-default btn-sm pull-right" %>
+          <a href="#" data-toggle="modal" data-target="#addCustomer" class="btn btn-default btn-sm pull-right" style="min-width: 65%; margin-right: 10%;"><i class="fa fa-user pull-left text-muted"></i>Add Customer</a>
+          <button class="btn btn-icon btn-default btn-sm pull-right visible-xs m-r-xs" data-toggle="class:show" data-target="#mail-nav"><i class="fa fa-reorder"></i></button>
+          <!--<p class="h4">Cart (25)</p>-->
+        </header>
+        <section class="scrollable wrapper w-f">
+        </section>
+      </section>
+    </aside>
     <aside>
 
       <section class="vbox">
