--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,5 +49,5 @@
           </section>
         </section>
     </body>
-    <%=render partial: 'template/flash_messages'%>
+    <%=render 'template/flash_messages'%>
 </html>
