--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -64,7 +64,7 @@
                             <a href="#" class="btn btn-default btn-lg btn-block col-sm-6">Issue Receipt</a>
                             </span>
                            <span class="col-sm-6">
-                            <a href="#" class="btn btn-default btn-lg btn-block col-sm-6">Issue Refund</a>
+                            <%= link_to 'Issue Refund' , issue_refund_sale_path(@sale), class: 'btn btn-default btn-lg btn-block col-sm-6', data: {confirm: 'Are you sure?', verify: 'Foo', verify_text: 'Type "Foo" to confirm'} %>
                            </span>
                         </div>
                           <div>
