point of sale link chnages

--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -107,7 +107,7 @@
                       </a>
                       <ul class="nav lt">
                         <li >
-                          <a href="<%= sales_path %>">
+                          <a href="<%= new_sale_path %>">
                             <i class="fa fa-angle-right"></i>
                             <span>Point of Sale</span>
                           </a>
