--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -113,7 +113,7 @@
                           </a>
                         </li>
                         <li >
-                          <a href="<%= sale_path(current_company.sales.last) %>" >
+                          <a href="<%= current_company.sales.present? ? sale_path(current_company.sales.last) : '#' %>" >
                             <i class="fa fa-angle-right"></i>
                             <span>Sales Record</span>
                           </a>
