--- a/app/views/dashboard/partials/_financial_position.html.erb
+++ b/app/views/dashboard/partials/_financial_position.html.erb
@@ -406,7 +406,7 @@
       </tr>
 
       <tr>
-        <td>Accounts Receivable (Milestones)</td>
+        <td>Accounts Receivablecd </td>
         <td class="align-r">
           <span class="all_currencies">
             <%= value_in_currency(account_receiveable) %>
