financial dashboared changes

--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -135,7 +135,7 @@
               </a>
               <ul class="nav lt">
                 <li >
-                  <a href="<%= finance_dashboard_index_path %>">
+                  <a href="<%= finance_index_path %>">
                     <i class="fa fa-angle-right"></i>
                     <span>Financial Dashboard</span>
                   </a>
