sale show scrollable

--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -48,7 +48,7 @@
       <header class="header bg-light lter bg-gradient b-note-b">
         <p id="note-date"><b> <%=value_in_currency(@sale.total_amount) %> </b></p>
       </header>
-      <section class="bg-light lter">
+      <section class="scrollable bg-light lter">
         <section class="hbox stretch">
           <aside>
 
