--- a/app/views/sales/ajax_reload.js.erb
+++ b/app/views/sales/ajax_reload.js.erb
@@ -18,6 +18,14 @@ $('.edit_sale').show();
 $('.task-card-photo').equalHeights();
 $('.item-img').equalHeights();
 $('.task-card-title').equalHeights();
+$('#h1-total-price').text("<%= number_to_currency(@sale.remaining_balance, unit: current_company.currency) %>");
+$(document).ready(function () {
+    $('#horizontalTab').easyResponsiveTabs({
+        type: 'default', //Types: default, vertical, accordion
+        width: 'auto', //auto or any width like 600px
+        fit: true   // 100% fit in a container
+    });
+});
 <%if flash[:alert].present? || flash[:toastr].present? || flash[:error].present? || flash[:errors].present? || flash[:success].present? || flash[:notice].present? || flash[:info].present?%>
 
 <%if flash[:alert].present?%>
