--- a/app/views/sales/shared/_modals.html.erb
+++ b/app/views/sales/shared/_modals.html.erb
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h1 class="modal-title text-center" id="myModalLabel"><%= number_to_currency(@sale.remaining_balance, unit: current_company.currency) %></h1>
+          <h1 class="modal-title text-center" id="h1-total-price"><%= number_to_currency(@sale.remaining_balance, unit: current_company.currency) %></h1>
         </div>
         <div class="modal-body">
           <%= render :partial => 'sales/shared/payment' %>
