enale sales search

--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -13,21 +13,21 @@
                 <div class="col-xs-4 col-md-4">
                     <%= f.collection_select :item_category, current_company.item_categories, :id, :name, {prompt: "Select a category"}, {class: "form-control item_category_search_input"}  %>
                   </div>
-                  <div class="col-xs-3 col-md-3">
-                    <!--<div class="input-group">-->
-                      <!--<%#= f.text_field :item_name, class: "form-control item_search_input awesomplete", list: 'items-list', placeholder: "Search Items" %>-->
-                      <!--<span class="input-group-btn">-->
-                           <!--<%#= submit_tag "search", :class => "btn btn-info item_search" %>-->
-                          <!--</span>-->
-                    <!--</div>-->
-                    <!--<datalist id="items-list">-->
-                      <!--<%# #@available_items.each do |itm| %>-->
-                          <!--<%#= link_to "link1", "#",{remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window'} %>-->
-                          <!--&lt;!&ndash; Don't remove the '.|' &ndash;&gt;-->
-                          <!--<option value=""><%#= itm.id %>.| <#%= itm.name %> | stk amount: <%#= itm.stock_amount %></option>-->
-                      <!--<%# end %>-->
+                  <div class="col-xs-6 col-md-6">
+                    <div class="input-group">
+                      <%= f.text_field :item_name, class: "form-control item_search_input awesomplete", list: 'items-list', placeholder: "Search Items" %>
+                      <span class="input-group-btn">
+                           <%= submit_tag "search", :class => "btn btn-info hidden item_search" %>
+                          </span>
+                    </div>
+                    <datalist id="items-list">
+                      <%@available_items.each do |itm| %>
+                          <%= link_to "link1", "#",{remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window'} %>
+                          <!-- Don't remove the '.|' -->
+                          <option value=""><%= itm.id %>.| <%= itm.name %> | stk amount: <%= itm.stock_amount %></option>
+                      <% end %>
 
-                    <!--</datalist>-->
+                    </datalist>
 
 
 
