--- a/app/views/sales/update_line_item_options.js.erb
+++ b/app/views/sales/update_line_item_options.js.erb
@@ -1,1 +1,6 @@
 $('.searched_items').html("<%= escape_javascript render('sales/shared/searched_items') %>");
+$('.item-eq').equalHeights();
+$('.task-card-photo').equalHeights();
+$('.item-img').equalHeights();
+$('.task-card-title').equalHeights();
+
