--- a/app/views/sales/shared/_modals.html.erb
+++ b/app/views/sales/shared/_modals.html.erb
@@ -20,7 +20,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h3 class="modal-title" id="myModalLabel"><b>ADD CUSTOMER</b></h3>
+            <h3 class="modal-title" id="myModalLabel"><b>CUSTOMERS</b></h3>
           </div>
           <div class="modal-body">
             <%= render :partial => 'sales/shared/customer_info', :object => @sale %>
