--- a/app/views/sales/update_customer_options.js.erb
+++ b/app/views/sales/update_customer_options.js.erb
@@ -1,2 +1,1 @@
-//$('.searched_customers').html("<%#= escape_javascript render('sales/shared/searched_customers') %>");
-alert("<%= escape_javascript render 'sales/shared/searched_customers' , customers: @available_customers %>");
+$('.searched_customers').html("<%= escape_javascript render('sales/shared/searched_customers' , sale: @sale , customers: @available_customers) %>");
