--- a/app/views/sales/shared/_searched_customers.html.erb
+++ b/app/views/sales/shared/_searched_customers.html.erb
@@ -12,17 +12,15 @@
     </thead>
 
     <tbody>
-      <% unless @available_customers.blank? %>
-        <% for customer in @available_customers %>
+        <% customers.each do |customer| %>
           <tr>
             <td><%= customer.last_name %></td>
             <td><%= customer.first_name %></td>
             <td><%= customer.phone_number %></td>
             <td><%= customer.email_address %></td>
-            <td class="add_to_current_sale"><%= link_to url_for(:controller => 'sales', :action => 'create_customer_association', :customer_id => customer.id, :sale_id => @sale.id), :remote => true do %><p><span class="glyphicon glyphicon-plus"></span></p><% end %></td>
+            <td class="add_to_current_sale"><%= link_to url_for(:controller => 'sales', :action => 'create_customer_association', :customer_id => customer.id, :sale_id => sale.id), :remote => true do %><p><span class="glyphicon glyphicon-plus"></span></p><% end %></td>
           </tr>
         <% end %>
-      <% end %>
     </tbody>
   </table>
 </div>
